--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>7.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+
 
     </dependencies>
 </project>
